# ai-log-intelligence-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.example.yaml
db/init/: 01-enable-pgvector.sql
db/schema/: bronze.sql  gold.sql  silver.sql
docs/: SETUP.md  architecture.md  production-readiness.md
docs/adr/: ADRs.md  adr-additions.md
src/loglens/: __init__.py  config.py  init_db.py  main.py  pii.py  run_pipeline.py
src/loglens/parsers/: __init__.py  apache_access.py  contract.py  registry.py  windows_service.py
src/loglens/pipeline/: __init__.py  bronze.py  embed_gold.py  gold.py  landing_bronze.py  retrieve_gold.py  silver.py
src/loglens/rag/: ask_gold.py  chat_gold.py  retrieve_gold.py
src/loglens/retrieval/: __init__.py  hybrid.py
src/loglens/storage/: __init__.py  postgres.py
tests/: test_apache_access.py  test_landing_bronze.py  test_pii.py  test_registry.py  test_schema.py  test_silver.py  test_storage.py
tools/: generate_apache_logs.py  generate_windows_logs.py  tools-README.md
